# WCHL2.0

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/ridesharing_backend/: Cargo.toml  ridesharing_backend.did
src/ridesharing_backend/src/: lib.rs
src/ridesharing_frontend/: package.json
src/ridesharing_frontend/src/: # Code Citations.md  App.css  App.jsx
src/ridesharing_frontend/src/contexts/: AuthContext.jsx
src/ridesharing_frontend/src/pages/: DriverHome.jsx  Landing.jsx  UserHome.jsx
src/ridesharing_frontend/src/styles/: DriverHome.css  UserHome.css
